--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-title{
-color: rgba(35, 182, 182, 0.685);
-text-align: center;
-font-size: 100px;
-width: ;
+h1{
+    color:#1131e7af;
+    text-align: center;
+    font-size: 100px;
 }
 
 
